Skip to content

2.2.1 regression: FTBFS: VLC dvdnav plugin

Since c7a58a78 / 059d996e51b8531bbaaedecc3a4db28813f2ed48, VLC fails to build with dvdnav version 5.0.1:

  CC       access/libdvdnav_plugin_la-dvdnav.lo
../../modules/access/dvdnav.c: In function ‘DemuxOpen’:
../../modules/access/dvdnav.c:465:12: error: unknown type name ‘dvdnav_stream_cb’
     static dvdnav_stream_cb stream_cb =
            ^
../../modules/access/dvdnav.c:467:9: error: field name not in record or union initializer
         .pf_seek = stream_cb_seek,
         ^
../../modules/access/dvdnav.c:467:9: note: (near initialization for ‘stream_cb’)
../../modules/access/dvdnav.c:467:20: warning: initialization makes integer from pointer without a cast [-Wint-conversion]
         .pf_seek = stream_cb_seek,
                    ^
../../modules/access/dvdnav.c:467:20: note: (near initialization for ‘stream_cb’)
../../modules/access/dvdnav.c:467:20: error: initializer element is not computable at load time
../../modules/access/dvdnav.c:467:20: note: (near initialization for ‘stream_cb’)
../../modules/access/dvdnav.c:468:9: error: field name not in record or union initializer
         .pf_read = stream_cb_read,
         ^
../../modules/access/dvdnav.c:468:9: note: (near initialization for ‘stream_cb’)
../../modules/access/dvdnav.c:468:20: warning: excess elements in scalar initializer
         .pf_read = stream_cb_read,
                    ^
../../modules/access/dvdnav.c:468:20: note: (near initialization for ‘stream_cb’)
../../modules/access/dvdnav.c:469:9: error: field name not in record or union initializer
         .pf_readv = NULL,
         ^
../../modules/access/dvdnav.c:469:9: note: (near initialization for ‘stream_cb’)
../../modules/access/dvdnav.c:473:9: error: implicit declaration of function ‘dvdnav_open_stream’ [-Werror=implicit-function-declaration]
     if( dvdnav_open_stream( &p_dvdnav, p_demux->s,
         ^
cc1: some warnings being treated as errors
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information