access: dvdnav: add additional version checking

Fixes #15357